ai-agent-ms-network/kubernetes/ai-agent-ms-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-agent-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
  - hosts:
    - 192.168.49.2.nip.io
  rules:
  - host: 192.168.49.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-agent-ms-service
            port:
              number: 443
